<resources>
    <string name="app_name">Pasar Ikan</string>
    <string name="desc_image_item">Image Item</string>
    <string name="next_image">Next Image</string>
    <string name="prompt_user_profile_icon">User Profile Icon</string>
    <string name="prompt_about">About</string>
    <string name="prompt_profile_image">Profile Image</string>
    <string name="about_description">Toko Ikan Abdul Mughni Al Fikri menjual berbagai macam ikan segar yang berada di laut selatan pulau jawa. Silahkan kunjungi toko kami dan dapatkan ikan segar setiap hari untuk kebutuhan toko/ keseharian kamu</string>
    <string name="title_item_details">Item Details</string>
    <string name="item_image">Item Image</string>
    <string name="fail_to_initialize_img_classifier">Failed to initialize an image classifier.</string>
    <string name="uninitialized_img_classifier_or_invalid_context">Uninitialized Classifier or invalid context.</string>
    <string name="item_name_colon">Nama Barang:</string>
    <string name="item_input_title">Input Barang</string>
    <string name="price_colon">Harga:</string>
    <string name="rupiah_rp">Rp</string>
    <string name="hint_10000">10000</string>
    <string name="kg">/ Kg</string>
    <string name="edit_profil_title">Edit Profil</string>
    <string name="prompt_app_icon">App Icon</string>
    <string-array name="image_name_array">
        <item>ikan_tuna</item>
        <item>ikan_salmon</item>
        <item>ikan_kakap</item>
        <item>ikan_sarden</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>
    <string name="title_penjualan">Penjualan</string>
    <string name="title_akun">Akun</string>
    <string name="title_toko">Toko</string>
    <string name="desc_icon_notification">icon_notification</string>
    <string name="desc_image_content">image_content</string>
    <string name="pasar_ikan_pangandaran">Pasar Ikan Pangandaran</string>
    <string name="pasar_ikan_cirebon">Pasar Ikan Cirebon</string>
    <string name="promo_hari_ini">Promo Hari ini</string>
    <string name="ikan_hari_ini">Ikan Hari ini</string>
    <string name="info_item_not_available">Maaf, barang belum tersedia</string>
    <string name="btn_text_lihat_semua">Lihat Semua</string>
    <string name="title_akun_saya">Akun Saya</string>
    <string name="prompt_data_toko">Data Toko</string>
    <string name="prompt_nama_pemilik">Nama Pemilik</string>
    <string name="prompt_user">User</string>
    <string name="prompt_no_ktp">No. KTP</string>
    <string name="hint_alamat_toko">Alamat Toko</string>
    <string name="hint_no_hp">No. HP</string>
    <string name="prompt_edit_profil">Edit Profil</string>
    <string name="prompt_log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="info_don_t_have_an_account">Don\'t have an account?</string>
    <string name="info_not_complete_identity">Anda belum melengkapi data diri</string>
    <string name="prompt_lengkapi_sekarang">Lengkapi Sekarang</string>
    <string name="prompt_informasi_toko">Informasi Toko</string>
    <string name="prompt_terjual">Terjual</string>
    <string name="prompt_0">0</string>
    <string name="prompt_penjualan">Penjualan</string>
    <string name="prompt_transaksi_gagal">Transaksi Gagal</string>
    <string name="prompt_produk_anda">Produk Anda</string>
    <string name="info_empty_list">Anda belum memiliki barang yang dijual</string>
    <string name="prompt_tambah_produk">Tambah Produk</string>
    <string name="prompt_edit">Edit</string>
    <string name="prompt_ikan_segar">Ikan Segar</string>
    <string name="prompt_semua_barang">Semua Barang</string>
    <string name="hint_city">Kota/ Kabupaten</string>
    <string name="hint_cari_ikan">Cari Ikan</string>
    <string name="text_sorry">Maaf, barang tidak ditemukan</string>
</resources>