<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_color_primary"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_profile_picture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/desc_image_content"
                    tools:src="@tools:sample/avatars" />

            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/container_lengkapi_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_empty_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/info_not_complete_identity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_empty_user_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_lengkapi_sekarang"
            android:textAllCaps="false" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_info_toko"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:id="@+id/bg_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_color_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="#f9d56e"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/bg_view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bg_view">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="16dp"
                                android:drawableStart="@drawable/ic_fish_market_24"
                                android:drawablePadding="8dp"
                                android:gravity="center"
                                android:includeFontPadding="true"
                                android:text="@string/prompt_informasi_toko"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:drawableStart="@drawable/ic_check"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_terjual" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:drawableStart="@drawable/ic_remove"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_transaksi_gagal" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="12dp"
                                android:orientation="horizontal">

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_0"
                                    android:textSize="24sp" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_weight="1"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_penjualan" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_0"
                                    android:textSize="24sp" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="4dp"
                                    android:layout_weight="1"
                                    android:drawablePadding="8dp"
                                    android:text="@string/prompt_transaksi_gagal" />
                            </LinearLayout>
                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/container_info_toko">

                    <LinearLayout
                        android:id="@+id/container_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="16dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="4dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:text="@string/prompt_produk_anda"
                            android:textColor="@color/gray900" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/btn_text_lihat_semua"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fish_item_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/container_text"
                        app:layout_constraintVertical_bias="0.0"
                        tools:itemCount="3"
                        android:overScrollMode="never"
                        tools:listitem="@layout/item_fish_list" />

                    <ProgressBar
                        android:id="@+id/pb_list_item_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_empty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/info_empty_list"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/container_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primaryColor"
        android:drawableLeft="@drawable/ic_round_add_24"
        android:text="@string/prompt_tambah_produk"
        android:textColor="@android:color/white"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>