<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ItemDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_round_arrow_back_24_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_about"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?android:attr/textColorPrimaryInverse" />

            </LinearLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_details_images"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/prompt_profile_image"
                    android:maxHeight="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_about_me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/prompt_profile_image"
                    android:src="@drawable/user_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/iv_profile"
                    app:layout_constraintStart_toStartOf="@id/iv_profile"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile"
                    tools:text="Abdul Mughni" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Name:"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Abdul Mughni Al Fikri"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="Email:"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="dev.abdulmughni@gmail.com"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_description"
                android:textAlignment="textStart"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>